# svplan

./: LICENSE  README.md
control_mpc/: CMakeLists.txt  package.xml
control_mpc/config/: size.yaml
control_mpc/include/: Control_MPC.hpp  MPC.hpp  Matrix.hpp  TFSubscriberNode.hpp
control_mpc/src/: Control_MPC.cpp  MPC.cpp  Matrix.cpp  TFSubscriberNode.cpp  main.cpp
gazebo_ros_velodyne_changed/: CMakeLists.txt  package.xml
gazebo_ros_velodyne_changed/src/: gazebo_ros_velodyne_changed.cpp
msgs/astar_msgs/: CMakeLists.txt  package.xml
msgs/astar_msgs/msg/: AStarPathArray.msg
msgs/initial_optimized_msgs/: CMakeLists.txt  package.xml
msgs/initial_optimized_msgs/msg/: InitialOptimizedTrajectory.msg
msgs/sdf_optimized_msgs/: CMakeLists.txt  package.xml
msgs/sdf_optimized_msgs/msg/: SDFOptimizedTrajectory.msg
multi_axle_vehicle_model/: package.xml  setup.cfg  setup.py
multi_axle_vehicle_model/control/: control.yaml
multi_axle_vehicle_model/launch/: car.launch.py
multi_axle_vehicle_model/meshes/dae/: string.dae  wheel.dae
multi_axle_vehicle_model/meshes/stl/: Change_size.py  Dae_Color.py  STL_DAE.py  string.stl  wheel.stl
multi_axle_vehicle_model/rviz/: display.rviz
multi_axle_vehicle_model/worlds/: city.world
multi_axle_vehicle_model/xacro/: car.xacro  car_combine.xacro  laser-32.xacro  laser.xacro  plugin.gazebo  track.xacro
odom_pub/: CMakeLists.txt  package.xml
odom_pub/src/: OdomPlugin.cpp
road_visualization/: CMakeLists.txt  package.xml
road_visualization/src/: road_publisher_node.cpp
route_planning/: CMakeLists.txt  package.xml
route_planning/config/: route_planning_config.yaml
route_planning/include/: A_Star_Node.hpp  Matrix.hpp  SDF.cuh  SDFOpimizationNode.hpp  TrajectoryOpimizationNode.hpp
route_planning/include/utils/: Makefile  minco.hpp
route_planning/src/: A_Star_Node.cpp  Matrix.cpp  SDF.cu  SDFOpimizationNode.cpp  TFSubscriberNode.cpp  TrajectoryOpimizationNode.cpp  main.cpp
