<?xml version="1.0"?>
<package format="3">
  <name>road_visualization</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 package for road visualization in RViz.</description>

  <maintainer email="2922520613@qq.com">ccwss</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
